# VisAGE

./: .gitignore  CMakeLists.txt  README.md
build-VisAGE-root/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
config/: Calib.yml  D1.xml  D2.xml  Distortion.xml  Distortion2.xml  Intrinsics.xml  Intrinsics1.xml  Intrinsics2.xml  M1.xml  M2.xml  P1.xml  P2.xml  Q.xml  R1.xml  R2.xml  RSI_cli.xml  Rotation2.xml  Translation.xml  Translation1.xml  Translation2.xml  calibracao_Basler.yml  default_linux.pfs
docs/: 10-06-14-VisAGE.odt  RSI-GAMAG.txt  Untitled Diagram.xml  requestRSI
docs/10-06-14/: 10-06-14-VisAGE.doc  10-06-14-VisAGE.odt
docs/25-08-14/: .~lock.25-08-14-VisAGE.odt#  25-08-14-VisAGE.odt  visage.dia
include/VIAGE/: conectrobo.hpp  mensurium.hpp  mensuriumage.hpp  prog.hpp
include/VISAGE/: _mensurium.hpp  baslerconfig.hpp  calibracam.hpp  conectrobo.hpp  mensurium.hpp  oclutil.h  prog.hpp  singlecam.hpp  stereocams.hpp
qt/: VisAGE.pro  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/: _mensurium.cpp  baslerconfig.cpp  calibracam.cpp  conectrobo.cpp  main.cpp  mensurium.cpp  mensuriumage.cpp  oclutil.cpp  prog.cpp  prog.cpp.orig  pugixml.cpp  singlecam.cpp  stereocams.cpp
